# lumin

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  devlog.md  flake.nix  sample_code.rs  spec.md  test_with_word.txt
src/: lib.rs  main.rs
src/paths/: mod.rs  tests.rs
src/search/: collect_files_test.rs  mod.rs  mod_tests.rs  pagination_test.rs  path_prefix_test.rs
src/telemetry/: mod.rs
src/traverse/: common.rs  mod.rs  path_prefix_test.rs
src/tree/: mod.rs  path_prefix_test.rs
src/view/: mod.rs
test/test_dir_1/: .gitignore
tests/: glob_consistency_test.rs  integration_tests.rs  search_after_context_tests.rs  search_before_context_tests.rs  search_combined_context_tests.rs  search_edge_case_tests.rs  search_exclude_glob_tests.rs  search_include_glob_tests.rs  search_omit_tests.rs  search_regex_advanced_tests.rs  search_regex_tests.rs  search_sort_tests.rs  search_tests.rs  search_unit_tests.rs  telemetry_unit_tests.rs  test_helpers.rs  traverse_glob_tests.rs  traverse_prefix_tests.rs  traverse_tests.rs  traverse_unit_tests.rs  tree_tests.rs  tree_unit_tests.rs  unit_integration_tests.rs  view_tests.rs  view_unit_tests.rs
tests/edge_case_files/: first_line_match.txt  last_line_match.txt
tests/fixtures/: .gitignore
tests/fixtures/nested/: file.rs
tests/fixtures/nested/level1/: level1.txt
tests/fixtures/nested/level1/level2/: level2.txt
tests/fixtures/text_files/: glob_patterns.txt  markdown.md  regex_advanced.txt  regex_lookarounds.txt  regex_patterns.txt  regex_practical.txt  sample.txt
tests/interactive_edge_cases/: first_and_last_match.txt  first_line_match.txt  last_line_match.txt  single_line_file.txt
tests/test_dir_1/: .gitignore  config.toml
tests/test_dir_1/docs/: CONTRIBUTING.md  README.md
tests/test_dir_1/images/: binary_executable
tests/test_dir_1/scripts/: process_data.py  setup.py
tests/test_dir_1/src/: binary_file.rs  lib.rs  main.rs
tests/test_dir_1/src/nested/: mod.rs  utils.rs
