[package]
name = "lumin"
version = "0.1.3"
edition = "2024"
description = "A library for searching and displaying local files"
license = "MIT"
authors = ["tacogips"]

[lib]
name = "lumin"
path = "src/lib.rs"

[[bin]]
name = "lumin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
eza = "0.21.1"
globset = "0.4.16"
grep = "0.3.2"
grep-printer = "0.2.2"
ignore = "0.4.23"
ignore-files = "3.0.3"
infer = "0.19.0"
log = "0.4.20"
opentelemetry = "0.21.0"
opentelemetry-stdout = { version = "0.2.0", features = ["trace", "logs"] }
opentelemetry_sdk = { version = "0.21.2", features = ["logs", "rt-tokio"] }
opentelemetry-semantic-conventions = "0.13.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serial_test = "2.0.0"
tempfile = "3.10.0"
